Column Grouping in Grid <Center align of grouped column header + Fixing column search issue>

--- a/grid/src/Styles/grid.scss
+++ b/grid/src/Styles/grid.scss
@@ -39,6 +39,11 @@
                 display: block;
             }
         }
+        &.group-column-heading.column-heading {
+            .column-heading-title {
+                justify-content: center;
+            }
+        }
         &.column-heading {
             color: #204d6f;
             display: flex;
